# images-to-pdf

./: BUILD_GUIDE.md  BUILD_REPORT.md  CLAUDE.md  QUICK_TEST.md  README.md  TESTING_CHECKLIST.md  WINDOWS_BUILD.md  index.html  package.json  pnpm-lock.yaml  tech.md  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: image.rs  pdf.rs
src-tauri/src/utils/: mod.rs  optimize.rs  validation.rs
src/components/: ExportButton.tsx  ImageItem.tsx  ImageList.tsx  ImageUploader.tsx  ProgressDialog.tsx  SettingsDialog.tsx  SettingsForm.tsx  SettingsPanel.tsx  theme-provider.tsx
src/components/ui/: dialog.tsx  select.tsx  switch.tsx
src/lib/: tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
